# api/api.yaml
@@ -56,6 +56,23 @@ paths:
                 $ref: "#/components/schemas/IdentityDetails"
         '404':
           description: The identity could not be found
+  /api/issuer/vc:
+    parameters:
+      - name: credentialTypes
+        description: A comma-separated list of credential types which are returned.
+        in: query
+        required: true
+        schema:
+          type: string
+    get:
+      operationId: getIssuedCredentials
+      responses:
+        '200':
+          description: List of issued VCs
+          content:
+            application/json:
+              schema:
+                type: object
 components:
   schemas:
     IdentityDetails:
